Fix allDayTitle visibility and special classes adding

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -15,6 +15,8 @@
 @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT: 50px;
 @SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 1.5;
 @SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT * 0.5;
+@SCHEDULER_VERTICAL_GROUPED_ALL_DAY_TABLE_CELL_HEIGHT: @SCHEDULER_WORKSPACE_DATE_TABLE_CELL_HEIGHT;
+
 @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT: 30px;
 
 @SCHEDULER_GROUP_HEADER_TABLE_CELL_WIDTH: 80px;
@@ -1380,6 +1382,11 @@
         .dx-scheduler-work-space-all-day-collapsed & {
             height: @SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT;
             line-height: @SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT;
+        }
+
+        .dx-scheduler-work-space-vertical-grouped & {
+            height: @SCHEDULER_VERTICAL_GROUPED_ALL_DAY_TABLE_CELL_HEIGHT;
+            line-height: @SCHEDULER_VERTICAL_GROUPED_ALL_DAY_TABLE_CELL_HEIGHT;
         }
     }
 
